tests/snapshots/type_resolver__type_resolver@01_undefined_variable.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/01_undefined_variable.lang
---
Err:
  UndefinedVar:
    name: y
