tests/snapshots/type_resolver__type_resolver@02_type_mismatch_let.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/02_type_mismatch_let.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Bool
