tests/snapshots/type_resolver__type_resolver@03_cannot_infer_type.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/03_cannot_infer_type.lang
---
Err:
  CannotInferType:
    name: x
