tests/snapshots/type_resolver__type_resolver@04_non_boolean_condition.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/04_non_boolean_condition.lang
---
Err:
  NonBooleanCondition:
    found:
      kind: Num
