tests/snapshots/type_resolver__type_resolver@05_invalid_unary_not_on_num.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/05_invalid_unary_not_on_num.lang
---
Err:
  InvalidUnaryOp:
    op: Not
    ty:
      kind: Num
