tests/snapshots/type_resolver__type_resolver@07_invalid_binary_type_mismatch.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/07_invalid_binary_type_mismatch.lang
---
Err:
  InvalidBinaryOp:
    op: Add
    lhs:
      kind: Num
    rhs:
      kind: Bool
