tests/snapshots/type_resolver__type_resolver@08_invalid_binary_add_on_bool.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/08_invalid_binary_add_on_bool.lang
---
Err:
  InvalidBinaryOp:
    op: Add
    lhs:
      kind: Bool
    rhs:
      kind: Bool
