tests/snapshots/type_resolver__type_resolver@09_invalid_binary_and_on_num.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/09_invalid_binary_and_on_num.lang
---
Err:
  InvalidBinaryOp:
    op: And
    lhs:
      kind: Num
    rhs:
      kind: Num
