tests/snapshots/type_resolver__type_resolver@11_return_void_expecting_num.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/11_return_void_expecting_num.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Void
