tests/snapshots/type_resolver__type_resolver@12_return_value_expecting_void.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/12_return_value_expecting_void.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Void
    found:
      kind: Num
